src/styles/prepare.css
.b-prepare {
  display: flex;
  font-size: 21px;
  font-weight: bold;
  height: 100%;
}

.b-prepare__title {
  background-color: #2c3e50;
  color: #fff;
  height: 75px;
  position: absolute;
  text-align: center;
  width: 100%;
  z-index: 10;

  > span {
    display: inline-block;
    padding-top: 20px;
    font-size: 28px;
  }
}

.b-prepare__orders, .b-prepare__abstract {
  padding-top: 75px;
}

.b-prepare__abstract__title {
  padding: 9px 0;
  background-color: #fff;
  color: #34495e;
  text-align: center;
}

.b-prepare__abstract__table {
  width: 100%;
  border-collapse: collapse;
}

.b-prepare__abstract__table td {
  padding: 5px;
  font-weight: 300;
  font-size: 20px;
}

.b-prepare__abstract__table_td_counter {
  text-align:center;
  vertical-align:middle;
  width: 15%;
}

.b-prepare__abstract__table_td_counter span {
  font-weight: bold;
}

.b-prepare__abstract__table_row {
  border-bottom: 1px solid #808b96;
}

.b-prepare__abstract__total_number {
  font-weight: bold;
}

.b-prepare__abstract {
  width: 20%;
  background-color: #34495e;
  color: #fff;
}

.b-prepare__orders {
  background-color: #677786;
  height: 100%;
  overflow-y: auto;
  width: 80%;
  display:flex;
  flex:1;
  flex-direction: column;
}

.b-prepare__abstract__table_td_counter--prepare {
  background: #d35400;
}

.b-prepare__orders__order {
  background-color: #2c3e50;
  color: #808b96;
  display: flex;
  margin: 10px auto;
  overflow: hidden;
  width: 98%;
  padding: 10px;
}

.b-prepare__orders__order__name {
  color: #fff;
  flex-grow: 1;
  line-height: 70px;
}

.b-prepare__orders__order__status {
  position: relative;
  height: 70px;
  padding: 0 10px;
  line-height: 70px;

  &:after {
    left: 100%;
    top: 50%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
    border-width: 35px;
    margin-top: -35px;
  }

  &.b-prepare__orders__order__status--active {
    color: #fff;
  }
}

.b-prepare__orders__order__pending {
  background-color: #673b41;
  left: -70px;
  padding-left: 20px;

  &:after {
    background-color: #6e4630;
    border-left-color: #673b41;

    .b-prepare__orders__order--prepare & {
      background-color: #d35400;
    }
  }

  &.b-prepare__orders__order__status--active {
    background-color: #c0392b;

    &:after {
      border-left-color: #c0392b;
    }
  }
}

.b-prepare__orders__order__prepare {
  background-color: #6e4630;
  left: -35px;

  &:after {
    background-color: #296b56;
    border-left-color: #6e4630;

    .b-prepare__orders__order--ready & {
      background-color: #27ae60;
    }
  }

  &.b-prepare__orders__order__status--active {
    background-color: #d35400;

    &:after {
      border-left-color: #d35400;
    }
  }
}

.b-prepare__orders__order__ready {
  background-color: #296b56;
  padding-right: 20px;

  &:after {
    border-width: 0;
  }

  &.b-prepare__orders__order__status--active {
    background-color: #27ae60;

    &:after {
      border-left-color: #27ae60;
    }
  }
}

.b-prepare__orders__empty {
  color: white;
  text-align: center;
  margin-top: 50px;
  font-weight: 300;
}

.b-prepare__orders__tabs {
  display: flex;
  min-height: 42px;
}

.b-prepare__orders__orders {
  overflow-y: overlay;
}

.b-prepare__orders__tabs__tab {
  background-color: #35415b;
  color: #ffe500;
  cursor: pointer;
  flex: 1;
  font-size: 24px;
  height: 42px;
  line-height: 31px;
  padding: 5px 10px;
  text-align: center;
}

.b-prepare__orders__tabs__tab--active {
  background-color: #ffe500;
  color: #35415b;
}

